--- a/Css/css.css
+++ b/Css/css.css
@@ -45,11 +45,6 @@ header nav ul li a{
     overflow: hidden;
 }
 
-.HomePage .main{
-    position: relative;
-    top: -4vh;
-    animation: slideRightToLeft 3s linear infinite;
-}
 
 .HomePage .mLable{
     position: absolute;
@@ -137,6 +132,8 @@ header nav ul li a{
     margin-top: 4vh;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+    filter: drop-shadow(0px 0px 23px rgb(0, 0, 0));
+    
 }
 
 .HomePage .dis button{
@@ -163,12 +160,29 @@ header nav ul li a{
     padding: 0;
 }
 
-@keyframes fadeEffect {
-    0% { opacity: 0; }
-    25% { opacity: 1; }
-    75% { opacity: 1; }
-    100% { opacity: 0; }
+.HomePage > div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none; /* Hide all slides by default */
 }
+
+.HomePage .main{
+    position: relative;
+    top: -4vh;
+    animation: slideRightToLeft 6s linear infinite;
+}
+
+.HomePage .main2{
+    position: relative;
+    top: -4vh;
+    animation: slideRightToLeft 6s linear infinite;
+}
+
+
+
 
 @keyframes slideRightToLeft {
     0% {
@@ -187,4 +201,8 @@ header nav ul li a{
         opacity: 0;
         transform: translateX(-100%);
     }
+}
+
+.HomePage .main2 h1{
+    font-size: 140px;
 }
